<resources>
    <string name="app_name">Sound Distance</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result_list">Results</string>
    <string name="title_activity_bt_scan_list">Bluetooth scan</string>
    <string name="title_activity_measure_choice">Measure choice</string>

    <string name="measure_choice_select_text">Select your measure\'s type :</string>
    <string name="measure_choice_distance">Distance</string>
    <string name="measure_choice_surface">Surface</string>
    <string name="measure_choice_volume">Volume</string>
    <string name="measure_choice_select_button">Apply</string>
    <string name="title_activity_measuring">MeasuringActivity</string>

    <string name="measuring_activity_title">Measuring</string>
    <string name="measuring_button_msg">Take measure</string>

    <string name="result_list_title">Your measures</string>
    <string name="result_list_button">New measure</string>
    <string name="result_list_no_measure">No measures yet</string>
    <string name="title_activity_measure_action_popup">MeasureActionPopup</string>

    <string name="first_measure_speaking">
        Please, put the back of the red box against a wall and click on the button.
    </string>
    <string name="second_measure_speaking">
        Please, put the back of the red box against a perpendicular wall and click on the button.
    </string>
    <string name="third_measure_speaking">
        Please, put the box in the vertical stand and press the button.
    </string>
    <string name="finished_measure_speaking">
        Congratulation, you have completed the measure process.
    </string>

    <string name="bt_rename_measure">Apply</string>
    <string name="title_activity_bluetooth">Scan paired devices</string>
    <string name="title_activity_measure_result">Measure Result</string>
    <string name="measure_result_title">Your measure</string>
    <string name="measure_result_return">Return</string>

</resources>
