<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mobop.sounddistance.MeasureChoiceActivity"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/measure_choice_select_text"
        android:id="@+id/textView"
        android:gravity="center_vertical|center_horizontal"/>

    <Space
        android:layout_width="20px"
        android:layout_height="70px" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_choice_distance"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/radioButton"
            android:layout_gravity="left" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_choice_surface"
            android:id="@+id/radioButton2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_choice_volume"
            android:id="@+id/radioButton3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left" />

    </RadioGroup>

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measure_choice_select_button"
        android:id="@+id/button"/>

</LinearLayout>
