<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mobop.activities.ResultListActivity"
    android:layout_marginLeft="@dimen/activity_left_right_margin"
    android:layout_marginRight="@dimen/activity_left_right_margin"
    android:gravity="center"
    android:weightSum="9">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result_list_title"
        android:gravity="center_horizontal"
        android:layout_weight="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ExpandableListView
            android:id="@+id/lvExpList"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/result_list_no_measure"
            android:id="@+id/tvNoMeasure"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_list_button"
        android:id="@+id/btResultList"
        android:layout_gravity="center_horizontal" />
</LinearLayout>